Adapt to 1.4.0 protocols